# EDI-2022-II-Parcial1

./: CMakeLists.txt  Ejercicio1.c  README.md  Tarea4Programa1.c  Tarea4Programa3.c
