cmake_minimum_required(VERSION 3.21)
project(EDI_2022_II_Parcial1)

set(CMAKE_CXX_STANDARD 14)

add_executable(EDI_2022_II_Parcial1
        .idea/cmake.xml
        .idea/EDI-2022-II-Parcial1.iml
        .idea/misc.xml
        .idea/modules.xml
        .idea/vcs.xml
        .idea/workspace.xml
        .gitignore
        Tarea4Programa1.c Tarea4Programa3.c)
